<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:tabIndicatorColor="@color/teal_700"
        app:tabSelectedTextColor="@color/teal_700"
        app:tabTextColor="@color/teal_700"
        app:tabTextAppearance="@style/TabLayoutTextAppearance">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_layout_citoyent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Citoyent" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_layout_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agent" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="28dp"
        android:layout_marginHorizontal="32dp"
        android:id="@+id/card_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="48dp"
            android:paddingHorizontal="32dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/teal_700"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp_info"
                android:alpha="0.7"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
            <EditText
                android:id="@+id/editAgentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agent_number"
                android:inputType="phone"
                />
            <EditText
                android:id="@+id/editTextNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/editTextPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/editTextAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/adress" />
            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/editTextCourriel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editTextMotDePasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextConfirmationMotDePasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirmation"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/singUp_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/teal_500"
                android:text="@string/sign_up"
                app:cornerRadius="32dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.7" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>