<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:alpha="0.9" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="45dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/top_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:textColor="@color/teal_500"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_info"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/u_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/u_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password_icon"
                android:inputType="textPassword" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/forgot_password"
                    android:textColor="@color/purple_500"
                />

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/connexion_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/teal_500"
                android:text="@string/login_button"
                app:cornerRadius="32dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/sign_up"
                app:cornerRadius="32dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>