<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_account_circle_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/white"/>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="88dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/teal_700"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_info"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>


            <EditText
                android:id="@+id/editTextCourriel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Courriel"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <EditText
                android:id="@+id/editTextMotDePasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nouveau mot de passe"
                android:inputType="textPassword" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>


            <EditText
                android:id="@+id/editTextConfirmationMotDePasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirmation du mot de passe"
                android:inputType="textPassword" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_acount_buton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/teal_500"
                android:text="@string/sign_up"
                app:cornerRadius="32dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">




            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>